Instant Address Standard/main/default/objects/PreferObject__c/PreferObject__c.object-meta.xml
<CustomObject>
    <description>objects with address to validate.</description>
    <label>PreferObject</label>
    <nameField>
        <label>PreferObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PreferObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>