Instant Address Standard/main/default/objects/PreferObject__c/fields/apiName__c.field-meta.xml
<CustomField>
    <fullName>apiName__c</fullName>
    <description>apiName</description>
    <label>apiName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>