Instant Address Standard/main/default/objects/PreferObject__c/fields/label__c.field-meta.xml
<CustomField>
    <fullName>label__c</fullName>
    <description>label</description>
    <inlineHelpText>label</inlineHelpText>
    <label>label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>