Instant Address Standard/main/default/objects/PreferObject__c/fields/objectType__c.field-meta.xml
<CustomField>
    <fullName>objectType__c</fullName>
    <description>objectType</description>
    <label>objectType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>